; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_validate_func_ret_type.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_validate_func_ret_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@ZEND_FFI_TYPE_FUNC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [54 x i8] c"function returning function is not allowed at line %d\00", align 1
@line = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i32 0, align 4
@ZEND_FFI_TYPE_ARRAY = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [51 x i8] c"function returning array is not allowed at line %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @zend_ffi_validate_func_ret_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zend_ffi_validate_func_ret_type(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ZEND_FFI_TYPE_FUNC, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32, i32* @line, align 4
  %11 = call i32 @FFI_G(i32 %10)
  %12 = call i32 @zend_ffi_throw_parser_error(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* @FAILURE, align 4
  store i32 %13, i32* %2, align 4
  br label %29

14:                                               ; preds = %1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @ZEND_FFI_TYPE_ARRAY, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %14
  %21 = load i32, i32* @line, align 4
  %22 = call i32 @FFI_G(i32 %21)
  %23 = call i32 @zend_ffi_throw_parser_error(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* @FAILURE, align 4
  store i32 %24, i32* %2, align 4
  br label %29

25:                                               ; preds = %14
  br label %26

26:                                               ; preds = %25
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %28 = call i32 @zend_ffi_validate_incomplete_type(%struct.TYPE_4__* %27, i32 1, i32 0)
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %26, %20, %9
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @zend_ffi_throw_parser_error(i8*, i32) #1

declare dso_local i32 @FFI_G(i32) #1

declare dso_local i32 @zend_ffi_validate_incomplete_type(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
